[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/world/Circle.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/world/levels/Level_016.gd" type="Script" id=2]
[ext_resource path="res://src/world/obstacles/Wall_2.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/world/obstacles/Wall_0.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/world/obstacles/RotatableTriangle.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/world/obstacles/Wall_Wide_0.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/world/obstacles/Button.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/world/obstacles/Beam.tscn" type="PackedScene" id=8]

[node name="Level" type="Node2D"]
show_behind_parent = true
script = ExtResource( 2 )

[node name="Circles" type="Node2D" parent="."]

[node name="Circle" parent="Circles" instance=ExtResource( 1 )]
position = Vector2( 67.423, 89.576 )
color_type = 2
angle = 210
size = 10.0

[node name="Circle2" parent="Circles" instance=ExtResource( 1 )]
position = Vector2( 1456.75, 443.274 )
color_type = 1
angle = 90
size = 18.0

[node name="Circle3" parent="Circles" instance=ExtResource( 1 )]
position = Vector2( 1277.65, 930.379 )
angle = 110
size = 24.0

[node name="Circle7" parent="Circles" instance=ExtResource( 1 )]
position = Vector2( 249.087, 694.157 )
angle = 110

[node name="Circle4" parent="Circles" instance=ExtResource( 1 )]
position = Vector2( 1766.88, 456.381 )
color_type = 2
angle = 30
size = 24.0

[node name="Circle5" parent="Circles" instance=ExtResource( 1 )]
position = Vector2( 618.483, 161.194 )
angle = 240
size = 15.0

[node name="Circle6" parent="Circles" instance=ExtResource( 1 )]
position = Vector2( 1464.68, 688.431 )
color_type = 1

[node name="Circle8" parent="Circles" instance=ExtResource( 1 )]
position = Vector2( 404.116, 950.068 )
color_type = 2
angle = -20
size = 19.0

[node name="Circle9" parent="Circles" instance=ExtResource( 1 )]
position = Vector2( 838.429, 635.189 )
color_type = 1

[node name="Circle10" parent="Circles" instance=ExtResource( 1 )]
position = Vector2( 461.41, 433.783 )
color_type = 3
angle = 210
size = 10.0

[node name="Circle11" parent="Circles" instance=ExtResource( 1 )]
position = Vector2( 1460.16, 928.775 )
color_type = 3
angle = 185
size = 8.0

[node name="Circle12" parent="Circles" instance=ExtResource( 1 )]
position = Vector2( 494.189, 685.118 )
color_type = 3

[node name="Statics" type="Node2D" parent="."]

[node name="Beams" type="Node2D" parent="Statics"]

[node name="Beam" parent="Statics/Beams" instance=ExtResource( 8 )]
position = Vector2( 1579.78, 538.606 )
scale = Vector2( 1, 0.862 )
color_type = 1

[node name="Beam2" parent="Statics/Beams" instance=ExtResource( 8 )]
position = Vector2( 339.781, 538.606 )
scale = Vector2( 1, 0.862 )
color_type = 1

[node name="Rotatables" type="Node2D" parent="Statics"]

[node name="RotatableTriangle" parent="Statics/Rotatables" instance=ExtResource( 5 )]
position = Vector2( 1777, 937.5 )
angles = PoolIntArray( 180, -90, 0, 90 )

[node name="RotatableTriangle2" parent="Statics/Rotatables" instance=ExtResource( 5 )]
position = Vector2( 143, 937.5 )
rotation = 1.5708
angles = PoolIntArray( 180, 90, 0, -90 )
reversed = true

[node name="RotatableTriangle3" parent="Statics/Rotatables" instance=ExtResource( 5 )]
position = Vector2( 143, 143 )
rotation = 3.14159
angles = PoolIntArray( 180, -90, 0, 90 )

[node name="RotatableTriangle4" parent="Statics/Rotatables" instance=ExtResource( 5 )]
position = Vector2( 1777, 143 )
rotation = -1.5708
angles = PoolIntArray( 180, 90, 0, -90 )
reversed = true

[node name="Wall4" parent="Statics" instance=ExtResource( 6 )]
position = Vector2( 960, 793.5 )
rotation = 1.5708
scale = Vector2( 1, 0.897 )

[node name="Button" parent="Statics" instance=ExtResource( 7 )]
position = Vector2( 960, 793.5 )

[node name="Wall" parent="Statics" instance=ExtResource( 4 )]
position = Vector2( 511, 793.287 )
rotation = 1.5708
scale = Vector2( 1, 0.899 )

[node name="Wall5" parent="Statics" instance=ExtResource( 4 )]
position = Vector2( 1408.98, 793.287 )
rotation = 1.5708
scale = Vector2( 1, 0.899 )

[node name="Wall2" parent="Statics" instance=ExtResource( 3 )]
position = Vector2( 960, 283.632 )
rotation = 1.5708
scale = Vector2( 1, 0.898 )
